# flask-dashboard-transaction

./: pyproject.toml
config/: settings.py
src/: __init__.py  app.py  login_manager.py  start_app.py
src/commands/: create_admin.py
src/db/models/: meta.py  mixins.py  transaction.py  user.py
src/login/: load_user.py
src/views/dashboard/: __init__.py  routes.py  utils.py
src/views/users/crud/: __init__.py  routes.py
templates/: base_generic.html  dashboard_main.html
